--- a/index.html
+++ b/index.html
@@ -11,6 +11,40 @@
       width: 100%; height: 100%; font-family: 'Orbitron', sans-serif;
       background: #0d0d0d; color: #fff; overflow: hidden;
     }
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: radial-gradient(circle at var(--x, 50%) var(--y, 50%), rgba(255,255,255,0.05), transparent 80%);
+      pointer-events: none;
+      z-index: 1;
+    }
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.85);
+      backdrop-filter: blur(10px);
+      padding: 15px 20px;
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      z-index: 100;
+    }
+    nav button {
+      background: transparent;
+      border: 1px solid #fff;
+      color: #fff;
+      padding: 10px 20px;
+      border-radius: 20px;
+      cursor: pointer;
+      transition: 0.3s;
+      font-size: 0.9rem;
+    }
+    nav button:hover {
+      background: #fff;
+      color: #000;
+    }
     #app {
       width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; flex-direction: column;
       transition: 0.3s;
@@ -39,13 +73,21 @@
       background: #fff; color: #000; transform: scale(1.05);
     }
     .back-btn {
-      position: absolute; top: 20px; left: 20px;
+      position: absolute; top: 70px; left: 20px;
       background: #111; border: 1px solid #fff; color: #fff;
       padding: 10px 20px; border-radius: 20px; cursor: pointer;
     }
   </style>
 </head>
 <body>
+  <nav>
+    <button onclick="goTo('mainScreen')">Home</button>
+    <button onclick="goTo('login')">Login</button>
+    <button onclick="goTo('shop')">Shop</button>
+    <button onclick="goTo('faq')">FAQ</button>
+    <button onclick="goTo('news')">News</button>
+    <button onclick="goTo('forum')">Forum</button>
+  </nav>
   <div id="app">
     <div id="mainScreen" class="screen active">
       <h1>RUSH.IO</h1>
@@ -98,6 +140,11 @@
       document.querySelectorAll('.screen').forEach(el => el.classList.remove('active'));
       document.getElementById(screenId).classList.add('active');
     }
+
+    document.addEventListener('mousemove', e => {
+      document.body.style.setProperty('--x', `${e.clientX}px`);
+      document.body.style.setProperty('--y', `${e.clientY}px`);
+    });
   </script>
 </body>
 </html>
