--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       width: 100%; height: 100%; font-family: 'Orbitron', sans-serif;
-      background: #0d0d0d; color: #fff; overflow: hidden;
+      background: #000; color: #fff; overflow: hidden;
     }
     body::before {
       content: "";
       position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
-      background: radial-gradient(circle at var(--x, 50%) var(--y, 50%), rgba(255,255,255,0.05), transparent 80%);
+      background: radial-gradient(circle at var(--x, 50%) var(--y, 50%), rgba(0, 255, 255, 0.05), transparent 80%);
       pointer-events: none;
       z-index: 1;
     }
@@ -23,8 +23,8 @@
       position: fixed;
       top: 0;
       width: 100%;
-      background: rgba(0, 0, 0, 0.85);
-      backdrop-filter: blur(10px);
+      background: rgba(0, 0, 0, 0.8);
+      backdrop-filter: blur(8px);
       padding: 15px 20px;
       display: flex;
       justify-content: center;
@@ -33,8 +33,8 @@
     }
     nav button {
       background: transparent;
-      border: 1px solid #fff;
-      color: #fff;
+      border: 1px solid #0ff;
+      color: #0ff;
       padding: 10px 20px;
       border-radius: 20px;
       cursor: pointer;
@@ -42,7 +42,7 @@
       font-size: 0.9rem;
     }
     nav button:hover {
-      background: #fff;
+      background: #0ff;
       color: #000;
     }
     #app {
@@ -52,30 +52,60 @@
     .screen {
       display: none; flex-direction: column; align-items: center; justify-content: center; text-align: center;
       width: 100vw; height: 100vh; position: absolute; top: 0; left: 0;
-      background: #0d0d0d; z-index: 10; transition: 0.3s ease-in-out;
+      background: url('https://images.unsplash.com/photo-1614853036537-2c509b2cc2b7?auto=format&fit=crop&w=2850&q=80') center/cover no-repeat;
+      background-attachment: fixed;
+      z-index: 10;
+      transition: 0.3s ease-in-out;
     }
     .screen.active { display: flex; z-index: 20; }
     h1 {
       font-size: 4rem;
-      background: linear-gradient(to right, #ffee00, #ff0055);
+      background: linear-gradient(to right, #00f0ff, #ff00f7);
       -webkit-background-clip: text; -webkit-text-fill-color: transparent;
       margin-bottom: 30px;
+      z-index: 5;
     }
     .btn-row {
       display: flex; flex-wrap: wrap; gap: 15px; justify-content: center;
     }
     button {
-      background: transparent; border: 2px solid #fff; color: #fff;
+      background: transparent; border: 2px solid #0ff; color: #0ff;
       padding: 12px 30px; border-radius: 30px; font-size: 1.1rem;
       cursor: pointer; transition: 0.3s ease;
+      z-index: 5;
     }
     button:hover {
-      background: #fff; color: #000; transform: scale(1.05);
+      background: #0ff; color: #000; transform: scale(1.05);
     }
     .back-btn {
       position: absolute; top: 70px; left: 20px;
-      background: #111; border: 1px solid #fff; color: #fff;
+      background: #111; border: 1px solid #0ff; color: #0ff;
       padding: 10px 20px; border-radius: 20px; cursor: pointer;
+    }
+    .login-box {
+      background: rgba(0, 0, 0, 0.7);
+      border: 2px solid #0ff;
+      border-radius: 15px;
+      padding: 30px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+    }
+    .login-box input {
+      padding: 10px 20px;
+      border: none;
+      outline: none;
+      border-radius: 10px;
+      font-size: 1rem;
+      width: 200px;
+    }
+    footer {
+      position: absolute;
+      bottom: 15px;
+      font-size: 0.9rem;
+      color: #888;
+      z-index: 5;
     }
   </style>
 </head>
@@ -92,22 +122,22 @@
     <div id="mainScreen" class="screen active">
       <h1>RUSH.IO</h1>
       <div class="btn-row">
-        <button onclick="goTo('login')">Login</button>
         <button onclick="window.open('https://www.roblox.com/games/115765639656471/Beta')">Play</button>
         <button onclick="window.open('https://discord.gg/BnwdPRSKRs')">Discord</button>
       </div>
-      <div class="btn-row" style="margin-top: 30px;">
-        <button onclick="goTo('shop')">Shop</button>
-        <button onclick="goTo('faq')">FAQ</button>
-        <button onclick="goTo('news')">News</button>
-        <button onclick="goTo('forum')">Forum</button>
-      </div>
+      <footer>
+        &copy; 2025 rush.io | Site by radicnt & ITypeTooMuchCodes
+      </footer>
     </div>
 
     <div id="login" class="screen">
       <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
-      <h1>Login</h1>
-      <p>Login system coming soon.</p>
+      <div class="login-box">
+        <h1>Login</h1>
+        <input type="text" placeholder="Username" />
+        <input type="password" placeholder="Password" />
+        <button onclick="alert('Login system coming soon.')">Login</button>
+      </div>
     </div>
 
     <div id="shop" class="screen">
