--- a/index.html
+++ b/index.html
@@ -1,176 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>rush.io | Official Roblox Game Site</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>rush.io - Roblox FPS</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Orbitron', sans-serif;
-      background: #0c0c0c;
-      color: #fff;
-      line-height: 1.6;
+    html, body {
+      width: 100%; height: 100%; font-family: 'Orbitron', sans-serif;
+      background: #000; color: #fff; overflow: hidden;
     }
-    header, section, footer {
-      padding: 60px 30px;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-    h1, h2 {
-      text-align: center;
-      margin-bottom: 20px;
-      background: linear-gradient(to right, #00ffff, #ff00ff);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: radial-gradient(circle at var(--x, 50%) var(--y, 50%), rgba(0, 255, 255, 0.05), transparent 80%);
+      pointer-events: none;
+      z-index: 1;
     }
     nav {
-      background: #000;
-      padding: 15px;
-      text-align: center;
-      position: sticky;
+      position: fixed;
       top: 0;
-      z-index: 10;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      backdrop-filter: blur(8px);
+      padding: 15px 20px;
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      z-index: 100;
     }
-    nav a {
-      margin: 0 15px;
+    nav button {
+      background: transparent;
+      border: 1px solid #0ff;
       color: #0ff;
-      text-decoration: none;
-      font-weight: bold;
+      padding: 10px 20px;
+      border-radius: 20px;
+      cursor: pointer;
       transition: 0.3s;
+      font-size: 0.9rem;
     }
-    nav a:hover {
-      color: #fff;
-    }
-    .btn {
-      display: inline-block;
-      margin: 10px;
-      padding: 12px 25px;
-      border: 2px solid #0ff;
-      color: #0ff;
-      text-decoration: none;
-      border-radius: 10px;
-      transition: 0.3s;
-    }
-    .btn:hover {
+    nav button:hover {
       background: #0ff;
       color: #000;
     }
-    .media img, .media video {
-      max-width: 100%;
-      margin: 10px 0;
-      border-radius: 8px;
+    #app {
+      width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; flex-direction: column;
+      transition: 0.3s;
     }
-    .credits p {
-      text-align: center;
-      font-size: 0.9rem;
-      color: #aaa;
+    .screen {
+      display: none; flex-direction: column; align-items: center; justify-content: center; text-align: center;
+      width: 100vw; height: 100vh; position: absolute; top: 0; left: 0;
+      background: url('https://images.unsplash.com/photo-1614853036537-2c509b2cc2b7?auto=format&fit=crop&w=2850&q=80') center/cover no-repeat;
+      background-attachment: fixed;
+      z-index: 10;
+      transition: 0.3s ease-in-out;
+    }
+    .screen.active { display: flex; z-index: 20; }
+    h1 {
+      font-size: 4rem;
+      background: linear-gradient(to right, #00f0ff, #ff00f7);
+      -webkit-background-clip: text; -webkit-text-fill-color: transparent;
+      margin-bottom: 30px;
+      z-index: 5;
+    }
+    .btn-row {
+      display: flex; flex-wrap: wrap; gap: 15px; justify-content: center;
+    }
+    button {
+      background: transparent; border: 2px solid #0ff; color: #0ff;
+      padding: 12px 30px; border-radius: 30px; font-size: 1.1rem;
+      cursor: pointer; transition: 0.3s ease;
+      z-index: 5;
+    }
+    button:hover {
+      background: #0ff; color: #000; transform: scale(1.05);
+    }
+    .back-btn {
+      position: absolute; top: 70px; left: 20px;
+      background: #111; border: 1px solid #0ff; color: #0ff;
+      padding: 10px 20px; border-radius: 20px; cursor: pointer;
+    }
+    .login-box {
+      background: rgba(0, 0, 0, 0.7);
+      border: 2px solid #0ff;
+      border-radius: 15px;
+      padding: 30px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+    }
+    .login-box input {
+      padding: 10px 20px;
+      border: none;
+      outline: none;
+      border-radius: 10px;
+      font-size: 1rem;
+      width: 200px;
     }
     footer {
-      text-align: center;
-      padding: 40px 20px;
-      background: #111;
-      color: #777;
-      font-size: 0.85rem;
+      position: absolute;
+      bottom: 15px;
+      font-size: 0.9rem;
+      color: #888;
+      z-index: 5;
     }
   </style>
 </head>
 <body>
   <nav>
-    <a href="#home">Home</a>
-    <a href="#play">Play</a>
-    <a href="#gallery">Media</a>
-    <a href="#about">About</a>
-    <a href="#features">Features</a>
-    <a href="#community">Community</a>
-    <a href="#shop">Shop</a>
-    <a href="#news">News</a>
-    <a href="#faq">FAQ</a>
-    <a href="#credits">Credits</a>
+    <button onclick="goTo('mainScreen')">Home</button>
+    <button onclick="goTo('login')">Login</button>
+    <button onclick="goTo('shop')">Shop</button>
+    <button onclick="goTo('faq')">FAQ</button>
+    <button onclick="goTo('news')">News</button>
+    <button onclick="goTo('forum')">Forum</button>
   </nav>
-
-  <header id="home">
-    <h1>RUSH.IO</h1>
-    <p style="text-align:center">a hyper-fast roblox shooter with bhop, twitch reflexes & chaos</p>
-    <div style="text-align:center">
-      <a href="https://www.roblox.com/games/115765639656471/Beta" target="_blank" class="btn">Play Now</a>
-      <a href="https://discord.gg/BnwdPRSKRs" target="_blank" class="btn">Join Discord</a>
-      <a href="#community" class="btn">Join Community</a>
+  <div id="app">
+    <div id="mainScreen" class="screen active">
+      <h1>RUSH.IO</h1>
+      <div class="btn-row">
+        <button onclick="window.open('https://www.roblox.com/games/115765639656471/Beta')">Play</button>
+        <button onclick="window.open('https://discord.gg/BnwdPRSKRs')">Discord</button>
+      </div>
+      <footer>
+        &copy; 2025 rush.io | Site by radicnt & ITypeTooMuchCodes
+      </footer>
     </div>
-  </header>
 
-  <section id="play">
-    <h2>Play rush.io</h2>
-    <p>Rush into fast-paced matches right from your browser or mobile. Bunnyhop, slide, frag, and dominate. No downloads, no waiting.</p>
-    <p><strong>Supported Platforms:</strong> PC, Mobile, Xbox</p>
-    <iframe width="100%" height="400" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
-  </section>
-
-  <section id="gallery">
-    <h2>Media Gallery</h2>
-    <div class="media">
-      <img src="https://via.placeholder.com/800x400.png?text=Gameplay+Screenshot+1" alt="screenshot 1">
-      <img src="https://via.placeholder.com/800x400.png?text=Gameplay+Screenshot+2" alt="screenshot 2">
-      <video src="https://cdn.pixabay.com/video/2023/03/15/155194-812769218_large.mp4" autoplay loop muted></video>
+    <div id="login" class="screen">
+      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
+      <div class="login-box">
+        <h1>Login</h1>
+        <input type="text" placeholder="Username" />
+        <input type="password" placeholder="Password" />
+        <button onclick="alert('Login system coming soon.')">Login</button>
+      </div>
     </div>
-  </section>
 
-  <section id="about">
-    <h2>About the Game</h2>
-    <p>rush.io is a competitive, high-speed FPS built inside Roblox. Inspired by games like Krunker, CS 1.6, and Titanfall — it focuses on momentum, bunnyhopping, and pure skill. No RNG, no BS. Just clean frags.</p>
-  </section>
+    <div id="shop" class="screen">
+      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
+      <h1>Shop</h1>
+      <p>Weapon skins and cosmetics coming soon.</p>
+    </div>
 
-  <section id="features">
-    <h2>Core Features</h2>
-    <ul>
-      <li>Bunnyhopping movement system</li>
-      <li>Real-time kill feed and leaderboard</li>
-      <li>Weapon skins and upgrades (coming soon)</li>
-      <li>Clean UI and customizable HUD</li>
-      <li>Private lobbies and ranked system (planned)</li>
-    </ul>
-  </section>
+    <div id="faq" class="screen">
+      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
+      <h1>FAQ</h1>
+      <p>Answers to common questions will be listed here.</p>
+    </div>
 
-  <section id="community">
-    <h2>Community</h2>
-    <p>Join us on Discord, Roblox, or follow us for development updates.</p>
-    <p>
-      <a class="btn" href="https://discord.gg/BnwdPRSKRs" target="_blank">Discord</a>
-      <a class="btn" href="https://www.roblox.com/groups/11477484" target="_blank">Roblox Group</a>
-    </p>
-  </section>
+    <div id="news" class="screen">
+      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
+      <h1>News</h1>
+      <p>Latest updates, devlogs and patch notes.</p>
+    </div>
 
-  <section id="shop">
-    <h2>Shop (Coming Soon)</h2>
-    <p>Purchase exclusive skins, bundles, and supporter gear to flex in-game. Everything here will be cosmetic only — no pay to win.</p>
-  </section>
+    <div id="forum" class="screen">
+      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
+      <h1>Forum</h1>
+      <p>Player discussions and feedback soon.</p>
+    </div>
+  </div>
 
-  <section id="news">
-    <h2>Patch Notes / News</h2>
-    <ul>
-      <li><strong>v0.4 Beta:</strong> Added new weapon sounds, fixed bhop bug</li>
-      <li><strong>v0.3 Beta:</strong> New map rotation & FFA improvements</li>
-    </ul>
-  </section>
+  <script>
+    function goTo(screenId) {
+      document.querySelectorAll('.screen').forEach(el => el.classList.remove('active'));
+      document.getElementById(screenId).classList.add('active');
+    }
 
-  <section id="faq">
-    <h2>FAQ</h2>
-    <ul>
-      <li><strong>Q:</strong> Why can’t I shoot? <strong>A:</strong> Check if your input is locked or your character reset.</li>
-      <li><strong>Q:</strong> How do I bunnyhop? <strong>A:</strong> Hold jump and strafe using A/D smoothly with mouse movement.</li>
-      <li><strong>Q:</strong> Why was I banned? <strong>A:</strong> Breaking the rules, exploits, or toxic behavior.</li>
-    </ul>
-  </section>
-
-  <section id="credits" class="credits">
-    <h2>Dev Team</h2>
-    <p>Game by <strong>radicnt</strong> and <strong>ITypeTooMuchCodes</strong></p>
-    <p>Built in Roblox Studio with love + late night energy</p>
-  </section>
-
-  <footer>
-    &copy; 2025 rush.io — All Rights Reserved. Site version 1.0
-  </footer>
+    document.addEventListener('mousemove', e => {
+      document.body.style.setProperty('--x', `${e.clientX}px`);
+      document.body.style.setProperty('--y', `${e.clientY}px`);
+    });
+  </script>
 </body>
 </html>
