--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+// full updated code with editable profile, logout, and achievements
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,156 +22,142 @@
     }
     nav {
       position: fixed;
-      top: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.8);
-      backdrop-filter: blur(8px);
-      padding: 15px 20px;
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      z-index: 100;
+      top: 0; width: 100%; background: rgba(0,0,0,0.8);
+      backdrop-filter: blur(8px); padding: 15px 20px;
+      display: flex; justify-content: center; gap: 30px; z-index: 100;
     }
     nav button {
-      background: transparent;
-      border: 1px solid #0ff;
-      color: #0ff;
-      padding: 10px 20px;
-      border-radius: 20px;
-      cursor: pointer;
-      transition: 0.3s;
-      font-size: 0.9rem;
+      background: transparent; border: 1px solid #0ff;
+      color: #0ff; padding: 10px 20px; border-radius: 20px;
+      cursor: pointer; transition: 0.3s; font-size: 0.9rem;
     }
-    nav button:hover {
-      background: #0ff;
-      color: #000;
-    }
-    #app {
-      width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; flex-direction: column;
-      transition: 0.3s;
-    }
+    nav button:hover { background: #0ff; color: #000; }
     .screen {
-      display: none; flex-direction: column; align-items: center; justify-content: center; text-align: center;
+      display: none; flex-direction: column; align-items: center; justify-content: center;
       width: 100vw; height: 100vh; position: absolute; top: 0; left: 0;
       background: url('https://images.unsplash.com/photo-1614853036537-2c509b2cc2b7?auto=format&fit=crop&w=2850&q=80') center/cover no-repeat;
-      background-attachment: fixed;
-      z-index: 10;
-      transition: 0.3s ease-in-out;
+      background-attachment: fixed; z-index: 10;
     }
     .screen.active { display: flex; z-index: 20; }
     h1 {
       font-size: 4rem;
       background: linear-gradient(to right, #00f0ff, #ff00f7);
       -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-      margin-bottom: 30px;
-      z-index: 5;
+      margin-bottom: 30px; z-index: 5;
     }
-    .btn-row {
-      display: flex; flex-wrap: wrap; gap: 15px; justify-content: center;
-    }
+    .btn-row { display: flex; gap: 15px; justify-content: center; flex-wrap: wrap; }
     button {
       background: transparent; border: 2px solid #0ff; color: #0ff;
       padding: 12px 30px; border-radius: 30px; font-size: 1.1rem;
       cursor: pointer; transition: 0.3s ease;
-      z-index: 5;
     }
-    button:hover {
-      background: #0ff; color: #000; transform: scale(1.05);
-    }
+    button:hover { background: #0ff; color: #000; transform: scale(1.05); }
     .back-btn {
       position: absolute; top: 70px; left: 20px;
       background: #111; border: 1px solid #0ff; color: #0ff;
       padding: 10px 20px; border-radius: 20px; cursor: pointer;
     }
-    .login-box {
-      background: rgba(0, 0, 0, 0.7);
-      border: 2px solid #0ff;
-      border-radius: 15px;
-      padding: 30px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 15px;
+    .login-box, .profile-box, .edit-box {
+      background: rgba(0, 0, 0, 0.7); border: 2px solid #0ff;
+      border-radius: 15px; padding: 30px; text-align: center;
+      display: flex; flex-direction: column; gap: 15px;
     }
-    .login-box input {
-      padding: 10px 20px;
-      border: none;
-      outline: none;
-      border-radius: 10px;
-      font-size: 1rem;
-      width: 200px;
+    .login-box input, .edit-box input {
+      padding: 10px 20px; border: none; outline: none;
+      border-radius: 10px; font-size: 1rem; width: 200px;
     }
-    footer {
-      position: absolute;
-      bottom: 15px;
-      font-size: 0.9rem;
-      color: #888;
-      z-index: 5;
-    }
+    footer { position: absolute; bottom: 15px; font-size: 0.9rem; color: #888; z-index: 5; }
   </style>
 </head>
 <body>
   <nav>
     <button onclick="goTo('mainScreen')">Home</button>
     <button onclick="goTo('login')">Login</button>
-    <button onclick="goTo('shop')">Shop</button>
-    <button onclick="goTo('faq')">FAQ</button>
-    <button onclick="goTo('news')">News</button>
-    <button onclick="goTo('forum')">Forum</button>
+    <button onclick="goTo('profile')">Profile</button>
+    <button onclick="goTo('editProfile')">Edit</button>
+    <button onclick="logout()">Logout</button>
   </nav>
-  <div id="app">
-    <div id="mainScreen" class="screen active">
-      <h1>RUSH.IO</h1>
-      <div class="btn-row">
-        <button onclick="window.open('https://www.roblox.com/games/115765639656471/Beta')">Play</button>
-        <button onclick="window.open('https://discord.gg/BnwdPRSKRs')">Discord</button>
-      </div>
-      <footer>
-        &copy; 2025 rush.io | Site by radicnt & ITypeTooMuchCodes
-      </footer>
-    </div>
 
-    <div id="login" class="screen">
-      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
-      <div class="login-box">
-        <h1>Login</h1>
-        <input type="text" placeholder="Username" />
-        <input type="password" placeholder="Password" />
-        <button onclick="alert('Login system coming soon.')">Login</button>
-      </div>
+  <div id="mainScreen" class="screen active">
+    <h1>RUSH.IO</h1>
+    <div class="btn-row">
+      <button onclick="window.open('https://www.roblox.com/games/115765639656471/Beta')">Play</button>
+      <button onclick="window.open('https://discord.gg/BnwdPRSKRs')">Discord</button>
     </div>
+    <footer>&copy; 2025 rush.io | Site by radicnt & ITypeTooMuchCodes</footer>
+  </div>
 
-    <div id="shop" class="screen">
-      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
-      <h1>Shop</h1>
-      <p>Weapon skins and cosmetics coming soon.</p>
+  <div id="login" class="screen">
+    <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
+    <div class="login-box">
+      <h1>Login</h1>
+      <input type="text" id="username" placeholder="Username" />
+      <input type="password" id="password" placeholder="Password" />
+      <button onclick="login()">Login</button>
     </div>
+  </div>
 
-    <div id="faq" class="screen">
-      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
-      <h1>FAQ</h1>
-      <p>Answers to common questions will be listed here.</p>
+  <div id="profile" class="screen">
+    <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
+    <div class="profile-box">
+      <h1>Welcome, <span id="displayName"></span></h1>
+      <p><strong>Level:</strong> <span id="profileLevel"></span></p>
+      <p><strong>Kills:</strong> <span id="profileKills"></span></p>
+      <p><strong>Rank:</strong> <span id="profileRank"></span></p>
+      <p><strong>Achievements:</strong></p>
+      <ul>
+        <li>🏆 First Login</li>
+        <li>🎯 100 Kills (Coming Soon)</li>
+      </ul>
     </div>
+  </div>
 
-    <div id="news" class="screen">
-      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
-      <h1>News</h1>
-      <p>Latest updates, devlogs and patch notes.</p>
-    </div>
-
-    <div id="forum" class="screen">
-      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
-      <h1>Forum</h1>
-      <p>Player discussions and feedback soon.</p>
+  <div id="editProfile" class="screen">
+    <button class="back-btn" onclick="goTo('profile')">← Back</button>
+    <div class="edit-box">
+      <h1>Edit Profile</h1>
+      <input id="editLevel" type="number" placeholder="Set Level" />
+      <input id="editKills" type="number" placeholder="Set Kills" />
+      <input id="editRank" placeholder="Set Rank" />
+      <button onclick="saveProfileEdits()">Save</button>
     </div>
   </div>
 
   <script>
-    function goTo(screenId) {
-      document.querySelectorAll('.screen').forEach(el => el.classList.remove('active'));
-      document.getElementById(screenId).classList.add('active');
+    const screens = document.querySelectorAll('.screen');
+    function goTo(id) {
+      screens.forEach(s => s.classList.remove('active'));
+      document.getElementById(id).classList.add('active');
     }
-
+    function login() {
+      const u = document.getElementById('username').value;
+      const p = document.getElementById('password').value;
+      if (u === 'player' && p === '1234') {
+        localStorage.setItem('rushioUser', u);
+        localStorage.setItem('rushioLevel', '12');
+        localStorage.setItem('rushioKills', '243');
+        localStorage.setItem('rushioRank', 'Platinum');
+        loadProfile(); goTo('profile');
+      } else alert('Invalid login. Try: player / 1234');
+    }
+    function loadProfile() {
+      document.getElementById('displayName').textContent = localStorage.getItem('rushioUser') || 'Guest';
+      document.getElementById('profileLevel').textContent = localStorage.getItem('rushioLevel') || '1';
+      document.getElementById('profileKills').textContent = localStorage.getItem('rushioKills') || '0';
+      document.getElementById('profileRank').textContent = localStorage.getItem('rushioRank') || 'Unranked';
+    }
+    function saveProfileEdits() {
+      localStorage.setItem('rushioLevel', document.getElementById('editLevel').value);
+      localStorage.setItem('rushioKills', document.getElementById('editKills').value);
+      localStorage.setItem('rushioRank', document.getElementById('editRank').value);
+      loadProfile(); goTo('profile');
+    }
+    function logout() {
+      localStorage.clear();
+      alert('You have been logged out.');
+      goTo('mainScreen');
+    }
+    window.onload = () => { if (localStorage.getItem('rushioUser')) loadProfile(); };
     document.addEventListener('mousemove', e => {
       document.body.style.setProperty('--x', `${e.clientX}px`);
       document.body.style.setProperty('--y', `${e.clientY}px`);
