--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
       content: "";
       position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
-      background: radial-gradient(circle at var(--x, 50%) var(--y, 50%), rgba(0, 255, 255, 0.05), transparent 80%);
+      background: radial-gradient(circle at var(--x, 50%) var(--y, 50%), rgba(0, 255, 255, 0.1), transparent 80%),
+                  linear-gradient(135deg, #0ff2, #f0f2);
+      background-size: 300% 300%;
+      animation: gradientMove 15s ease infinite;
       pointer-events: none;
       z-index: 1;
+    }
+    @keyframes gradientMove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
     nav {
       position: fixed;
@@ -52,8 +60,7 @@
     .screen {
       display: none; flex-direction: column; align-items: center; justify-content: center; text-align: center;
       width: 100vw; height: 100vh; position: absolute; top: 0; left: 0;
-      background: url('https://images.unsplash.com/photo-1614853036537-2c509b2cc2b7?auto=format&fit=crop&w=2850&q=80') center/cover no-repeat;
-      background-attachment: fixed;
+      background: none;
       z-index: 10;
       transition: 0.3s ease-in-out;
     }
