--- a/index.html
+++ b/index.html
@@ -11,21 +11,12 @@
       width: 100%; height: 100%; font-family: 'Orbitron', sans-serif;
       background: #000; color: #fff; overflow: hidden;
     }
-    body::before {
-      content: "";
+    #bg-video {
       position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: radial-gradient(circle at var(--x, 50%) var(--y, 50%), rgba(0, 255, 255, 0.1), transparent 80%),
-                  linear-gradient(135deg, #0ff2, #f0f2);
-      background-size: 300% 300%;
-      animation: gradientMove 15s ease infinite;
+      top: 0; left: 0; width: 100%; height: 100%;
+      object-fit: cover;
+      z-index: 0;
       pointer-events: none;
-      z-index: 1;
-    }
-    @keyframes gradientMove {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
     }
     nav {
       position: fixed;
@@ -56,6 +47,8 @@
     #app {
       width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; flex-direction: column;
       transition: 0.3s;
+      z-index: 10;
+      position: relative;
     }
     .screen {
       display: none; flex-direction: column; align-items: center; justify-content: center; text-align: center;
@@ -117,6 +110,9 @@
   </style>
 </head>
 <body>
+  <video autoplay muted loop id="bg-video">
+    <source src="https://cdn.pixabay.com/video/2023/01/04/144009-790808601_large.mp4" type="video/mp4">
+  </video>
   <nav>
     <button onclick="goTo('mainScreen')">Home</button>
     <button onclick="goTo('login')">Login</button>
@@ -177,11 +173,6 @@
       document.querySelectorAll('.screen').forEach(el => el.classList.remove('active'));
       document.getElementById(screenId).classList.add('active');
     }
-
-    document.addEventListener('mousemove', e => {
-      document.body.style.setProperty('--x', `${e.clientX}px`);
-      document.body.style.setProperty('--y', `${e.clientY}px`);
-    });
   </script>
 </body>
 </html>
