--- a/index.html
+++ b/index.html
@@ -111,11 +111,10 @@
 </head>
 <body>
   <video autoplay muted loop id="bg-video">
-    <source src="https://cdn.pixabay.com/video/2023/01/04/144009-790808601_large.mp4" type="video/mp4">
+    <source src="https://player.vimeo.com/external/346678684.sd.mp4?s=bda56732594f32d3ac670b4f5cb8674cc68f92a4&profile_id=165" type="video/mp4">
   </video>
   <nav>
     <button onclick="goTo('mainScreen')">Home</button>
-    <button onclick="goTo('login')">Login</button>
     <button onclick="goTo('shop')">Shop</button>
     <button onclick="goTo('faq')">FAQ</button>
     <button onclick="goTo('news')">News</button>
@@ -131,16 +130,6 @@
       <footer>
         &copy; 2025 rush.io | Site by radicnt & ITypeTooMuchCodes
       </footer>
-    </div>
-
-    <div id="login" class="screen">
-      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
-      <div class="login-box">
-        <h1>Login</h1>
-        <input type="text" placeholder="Username" />
-        <input type="password" placeholder="Password" />
-        <button onclick="alert('Login system coming soon.')">Login</button>
-      </div>
     </div>
 
     <div id="shop" class="screen">
