--- a/index.html
+++ b/index.html
@@ -110,15 +110,9 @@
   </style>
 </head>
 <body>
-  <div style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 0; overflow: hidden;">
-    <iframe
-      src="https://www.youtube.com/embed/jw9crkSYaf4?autoplay=1&mute=1&controls=0&loop=1&playlist=jw9crkSYaf4&modestbranding=1&showinfo=0&rel=0"
-      frameborder="0"
-      allow="autoplay; fullscreen"
-      allowfullscreen
-      style="width: 100%; height: 100%; pointer-events: none;">
-    </iframe>
-  </div>
+  <video autoplay muted loop playsinline id="bg-video">
+    <source src="rushio_background.mp4" type="video/mp4">
+  </video>
   <nav>
     <button onclick="goTo('mainScreen')">Home</button>
     <button onclick="goTo('shop')">Shop</button>
