--- a/index.html
+++ b/index.html
@@ -3,165 +3,34 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>rush.io - Roblox FPS</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+  <title>rush.io Background</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
-      width: 100%; height: 100%; font-family: 'Orbitron', sans-serif;
-      background: #000; color: #fff; overflow: hidden;
+      width: 100%; height: 100%; overflow: hidden;
+      background: #000;
     }
-    #bg-video {
+    .video-container {
       position: fixed;
-      top: 0; left: 0; width: 100%; height: 100%;
-      object-fit: cover;
-      z-index: 0;
-      pointer-events: none;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      z-index: -1;
     }
-    nav {
-      position: fixed;
-      top: 0;
+    .video-container iframe {
       width: 100%;
-      background: rgba(0, 0, 0, 0.8);
-      backdrop-filter: blur(8px);
-      padding: 15px 20px;
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      z-index: 100;
-    }
-    nav button {
-      background: transparent;
-      border: 1px solid #0ff;
-      color: #0ff;
-      padding: 10px 20px;
-      border-radius: 20px;
-      cursor: pointer;
-      transition: 0.3s;
-      font-size: 0.9rem;
-    }
-    nav button:hover {
-      background: #0ff;
-      color: #000;
-    }
-    #app {
-      width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; flex-direction: column;
-      transition: 0.3s;
-      z-index: 10;
-      position: relative;
-    }
-    .screen {
-      display: none; flex-direction: column; align-items: center; justify-content: center; text-align: center;
-      width: 100vw; height: 100vh; position: absolute; top: 0; left: 0;
-      background: none;
-      z-index: 10;
-      transition: 0.3s ease-in-out;
-    }
-    .screen.active { display: flex; z-index: 20; }
-    h1 {
-      font-size: 4rem;
-      background: linear-gradient(to right, #00f0ff, #ff00f7);
-      -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-      margin-bottom: 30px;
-      z-index: 5;
-    }
-    .btn-row {
-      display: flex; flex-wrap: wrap; gap: 15px; justify-content: center;
-    }
-    button {
-      background: transparent; border: 2px solid #0ff; color: #0ff;
-      padding: 12px 30px; border-radius: 30px; font-size: 1.1rem;
-      cursor: pointer; transition: 0.3s ease;
-      z-index: 5;
-    }
-    button:hover {
-      background: #0ff; color: #000; transform: scale(1.05);
-    }
-    .back-btn {
-      position: absolute; top: 70px; left: 20px;
-      background: #111; border: 1px solid #0ff; color: #0ff;
-      padding: 10px 20px; border-radius: 20px; cursor: pointer;
-    }
-    .login-box {
-      background: rgba(0, 0, 0, 0.7);
-      border: 2px solid #0ff;
-      border-radius: 15px;
-      padding: 30px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 15px;
-    }
-    .login-box input {
-      padding: 10px 20px;
+      height: 100%;
       border: none;
-      outline: none;
-      border-radius: 10px;
-      font-size: 1rem;
-      width: 200px;
-    }
-    footer {
-      position: absolute;
-      bottom: 15px;
-      font-size: 0.9rem;
-      color: #888;
-      z-index: 5;
+      pointer-events: none;
     }
   </style>
 </head>
 <body>
-  <video autoplay muted loop playsinline id="bg-video">
-    <source src="rushio_background.mp4" type="video/mp4">
-  </video>
-  <nav>
-    <button onclick="goTo('mainScreen')">Home</button>
-    <button onclick="goTo('shop')">Shop</button>
-    <button onclick="goTo('faq')">FAQ</button>
-    <button onclick="goTo('news')">News</button>
-    <button onclick="goTo('forum')">Forum</button>
-  </nav>
-  <div id="app">
-    <div id="mainScreen" class="screen active">
-      <h1>RUSH.IO</h1>
-      <div class="btn-row">
-        <button onclick="window.open('https://www.roblox.com/games/115765639656471/Beta')">Play</button>
-        <button onclick="window.open('https://discord.gg/BnwdPRSKRs')">Discord</button>
-      </div>
-      <footer>
-        &copy; 2025 rush.io | Site by radicnt & ITypeTooMuchCodes
-      </footer>
-    </div>
-
-    <div id="shop" class="screen">
-      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
-      <h1>Shop</h1>
-      <p>Weapon skins and cosmetics coming soon.</p>
-    </div>
-
-    <div id="faq" class="screen">
-      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
-      <h1>FAQ</h1>
-      <p>Answers to common questions will be listed here.</p>
-    </div>
-
-    <div id="news" class="screen">
-      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
-      <h1>News</h1>
-      <p>Latest updates, devlogs and patch notes.</p>
-    </div>
-
-    <div id="forum" class="screen">
-      <button class="back-btn" onclick="goTo('mainScreen')">← Back</button>
-      <h1>Forum</h1>
-      <p>Player discussions and feedback soon.</p>
-    </div>
+  <div class="video-container">
+    <iframe 
+      src="https://www.youtube.com/embed/9jbkJjp8lwA?autoplay=1&mute=1&controls=0&loop=1&playlist=9jbkJjp8lwA&modestbranding=1&showinfo=0&rel=0" 
+      allow="autoplay; fullscreen"
+      allowfullscreen
+    ></iframe>
   </div>
-
-  <script>
-    function goTo(screenId) {
-      document.querySelectorAll('.screen').forEach(el => el.classList.remove('active'));
-      document.getElementById(screenId).classList.add('active');
-    }
-  </script>
 </body>
 </html>
