--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       position: fixed;
       top: 0;
       width: 100%;
-      background: rgba(0, 0, 0, 0.8);
+      background: rgba(0, 0,  0, 0.8);
       backdrop-filter: blur(8px);
       padding: 15px 20px;
       display: flex;
@@ -40,12 +40,13 @@
       padding: 10px 20px;
       border-radius: 20px;
       cursor: pointer;
-      transition: 0.3s;
+      transition: 0.3s, box-shadow 0.3s;
       font-size: 0.9rem;
     }
     nav button:hover {
       background: #0ff;
       color: #000;
+      box-shadow: 0 0 12px #0ff;
     }
     #app {
       width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; flex-direction: column;
@@ -77,11 +78,12 @@
     button {
       background: transparent; border: 2px solid #0ff; color: #0ff;
       padding: 12px 30px; border-radius: 30px; font-size: 1.1rem;
-      cursor: pointer; transition: 0.3s ease;
+      cursor: pointer; transition: 0.3s, transform 0.3s, box-shadow 0.3s;
       z-index: 5;
     }
     button:hover {
       background: #0ff; color: #000; transform: scale(1.05);
+      box-shadow: 0 0 20px #0ff;
     }
     .back-btn {
       position: absolute; top: 70px; left: 20px;
