--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <div class="btn-row">
         <button onclick="window.open('https://www.roblox.com/games/115765639656471/Beta')">Play</button>
         <button onclick="window.open('https://discord.gg/BnwdPRSKRs')">Discord</button>
-        <button onclick="window.open('https://www.roblox.com/groups/33640455')">Roblox Group</button>
+        <button onclick="window.open('https://www.roblox.com/communities/35896083/scripture-exe#!/about')">Roblox Group</button>
       </div>
       <footer>
         &copy; 2025 rush.io | Site by radicnt & ITypeTooMuchCodes
